--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ember-data-request-service-cheat-sheet",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "private": true,
-  "description": "See side-by-side examples of Ember Octane and Ember Classic",
+  "description": "See side-by-side examples of EmberData's Request Service and older patterns.",
   "repository": {
     "type": "git",
     "url": "https://github.com/ember-learn/ember-data-request-service-cheat-sheet.git"
